// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundWorker example Change release version 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Namespace",
    "metadata": Object {
      "labels": Object {
        "app": "example",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-development-local",
      },
      "name": "example",
      "namespace": "example",
    },
  },
  Object {
    "apiVersion": "v1",
    "data": Object {
      ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsiYXV0aCI6ImMyOXRaWFZ6WlhJNmMyVmpjbVYwTVRJeiJ9fX0=",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "app": "example",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-development-local",
      },
      "name": "example-development-local-image-pull-secret-c8fa1a91",
      "namespace": "example",
    },
    "type": "kubernetes.io/dockerconfigjson",
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "talis.io/chat": "https://talis.slack.com/archives/C04P9DPCX",
        "talis.io/description": "Frontend to the Resque job queue system",
        "talis.io/eks-dashboard": "None",
        "talis.io/graphs": "None",
        "talis.io/incidents": "None",
        "talis.io/issues": "https://github.com/talis/platform/issues",
        "talis.io/logs": "None",
        "talis.io/repository": "https://github.com/talis/resque-web-container",
        "talis.io/runbook": "None",
        "talis.io/uptime": "None",
        "talis.io/url": "https://resque.example.com",
      },
      "labels": Object {
        "app": "resque",
        "environment": "development",
        "instance": "resque",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "stable",
        "role": "server",
        "service": "example-development-local",
      },
      "name": "example-development-local-resque-service-c804e6ef",
      "namespace": "example",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": Object {
        "app": "resque",
        "instance": "resque",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "alb.ingress.kubernetes.io/listen-ports": "[{\\"HTTP\\":80},{\\"HTTPS\\":443}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "example-resque-develop",
        "alb.ingress.kubernetes.io/ssl-policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
        "alb.ingress.kubernetes.io/ssl-redirect": "443",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "service=example-development-local,instance=resque,environment=development",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": Object {
        "app": "resque",
        "environment": "development",
        "instance": "resque",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "stable",
        "role": "server",
        "service": "example-development-local",
      },
      "name": "example-development-local-resque-ingress-c84b8e52",
      "namespace": "example",
    },
    "spec": Object {
      "defaultBackend": Object {
        "service": Object {
          "name": "example-development-local-resque-service-c804e6ef",
          "port": Object {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internal",
      "tls": Array [
        Object {
          "hosts": Array [
            "*.example.com",
          ],
        },
      ],
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "resque",
        "environment": "development",
        "instance": "resque",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "stable",
        "role": "server",
        "service": "example-development-local",
      },
      "name": "example-development-local-resque-deployment-c82222d7",
      "namespace": "example",
    },
    "spec": Object {
      "replicas": 1,
      "revisionHistoryLimit": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "resque",
          "instance": "resque",
          "role": "server",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "resque",
            "environment": "development",
            "instance": "resque",
            "managed-by": "cdk8s",
            "region": "local",
            "release": "stable",
            "role": "server",
            "service": "example-development-local",
          },
        },
        "spec": Object {
          "affinity": Object {
            "podAntiAffinity": Object {
              "preferredDuringSchedulingIgnoredDuringExecution": Array [
                Object {
                  "podAffinityTerm": Object {
                    "labelSelector": Object {
                      "matchLabels": Object {
                        "app": "resque",
                        "instance": "resque",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "RAILS_RESQUE_REDIS",
                  "value": "redis.cache.svc.cluster.local:6379:1",
                },
              ],
              "image": "talis/resque-web:stable",
              "imagePullPolicy": "IfNotPresent",
              "name": "example",
              "ports": Array [
                Object {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "200Mi",
                },
                "requests": Object {
                  "cpu": "50m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "imagePullSecrets": Array [
            Object {
              "name": "example-development-local-image-pull-secret-c8fa1a91",
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "example",
        "environment": "development",
        "instance": "php-worker-example",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "v2.2",
        "role": "worker",
        "service": "example-development-local",
      },
      "name": "example-development-local-php-worker-example-c8a4b861",
      "namespace": "example",
    },
    "spec": Object {
      "revisionHistoryLimit": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "example",
          "instance": "php-worker-example",
          "role": "worker",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "example",
            "environment": "development",
            "instance": "php-worker-example",
            "managed-by": "cdk8s",
            "region": "local",
            "release": "v2.2",
            "role": "worker",
            "service": "example-development-local",
          },
        },
        "spec": Object {
          "affinity": Object {
            "podAntiAffinity": Object {
              "preferredDuringSchedulingIgnoredDuringExecution": Array [
                Object {
                  "podAffinityTerm": Object {
                    "labelSelector": Object {
                      "matchLabels": Object {
                        "app": "example",
                        "instance": "php-worker-example",
                        "role": "worker",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "command": Array [
                "php",
                "vendor/resque/php-resque/bin/resque",
              ],
              "env": Array [
                Object {
                  "name": "WORKER_NUM",
                  "valueFrom": Object {
                    "fieldRef": Object {
                      "fieldPath": "metadata.name",
                    },
                  },
                },
                Object {
                  "name": "REDIS_BACKEND",
                  "value": "redis.cache.svc.cluster.local:6379:1",
                },
                Object {
                  "name": "QUEUE",
                  "value": "my-app:example:jobs",
                },
              ],
              "image": "docker.io/organization/my-app:worker-v2.2",
              "imagePullPolicy": "IfNotPresent",
              "lifecycle": Object {
                "preStop": Object {
                  "exec": Object {
                    "command": Array [
                      "/bin/sh",
                      "-c",
                      "kill -QUIT 1 && while kill -0 1; do sleep 1; done",
                    ],
                  },
                },
              },
              "name": "example",
              "resources": Object {
                "requests": Object {
                  "cpu": "50m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "imagePullSecrets": Array [
            Object {
              "name": "example-development-local-image-pull-secret-c8fa1a91",
            },
          ],
          "terminationGracePeriodSeconds": 300,
        },
      },
    },
  },
]
`;

exports[`BackgroundWorker example Snapshot 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Namespace",
    "metadata": Object {
      "labels": Object {
        "app": "example",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-development-local",
      },
      "name": "example",
      "namespace": "example",
    },
  },
  Object {
    "apiVersion": "v1",
    "data": Object {
      ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsiYXV0aCI6ImMyOXRaWFZ6WlhJNmMyVmpjbVYwTVRJeiJ9fX0=",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "app": "example",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-development-local",
      },
      "name": "example-development-local-image-pull-secret-c8fa1a91",
      "namespace": "example",
    },
    "type": "kubernetes.io/dockerconfigjson",
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "talis.io/chat": "https://talis.slack.com/archives/C04P9DPCX",
        "talis.io/description": "Frontend to the Resque job queue system",
        "talis.io/eks-dashboard": "None",
        "talis.io/graphs": "None",
        "talis.io/incidents": "None",
        "talis.io/issues": "https://github.com/talis/platform/issues",
        "talis.io/logs": "None",
        "talis.io/repository": "https://github.com/talis/resque-web-container",
        "talis.io/runbook": "None",
        "talis.io/uptime": "None",
        "talis.io/url": "https://resque.example.com",
      },
      "labels": Object {
        "app": "resque",
        "environment": "development",
        "instance": "resque",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "stable",
        "role": "server",
        "service": "example-development-local",
      },
      "name": "example-development-local-resque-service-c804e6ef",
      "namespace": "example",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": Object {
        "app": "resque",
        "instance": "resque",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "alb.ingress.kubernetes.io/listen-ports": "[{\\"HTTP\\":80},{\\"HTTPS\\":443}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "example-resque-develop",
        "alb.ingress.kubernetes.io/ssl-policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
        "alb.ingress.kubernetes.io/ssl-redirect": "443",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "service=example-development-local,instance=resque,environment=development",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": Object {
        "app": "resque",
        "environment": "development",
        "instance": "resque",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "stable",
        "role": "server",
        "service": "example-development-local",
      },
      "name": "example-development-local-resque-ingress-c84b8e52",
      "namespace": "example",
    },
    "spec": Object {
      "defaultBackend": Object {
        "service": Object {
          "name": "example-development-local-resque-service-c804e6ef",
          "port": Object {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internal",
      "tls": Array [
        Object {
          "hosts": Array [
            "*.example.com",
          ],
        },
      ],
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "resque",
        "environment": "development",
        "instance": "resque",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "stable",
        "role": "server",
        "service": "example-development-local",
      },
      "name": "example-development-local-resque-deployment-c82222d7",
      "namespace": "example",
    },
    "spec": Object {
      "replicas": 1,
      "revisionHistoryLimit": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "resque",
          "instance": "resque",
          "role": "server",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "resque",
            "environment": "development",
            "instance": "resque",
            "managed-by": "cdk8s",
            "region": "local",
            "release": "stable",
            "role": "server",
            "service": "example-development-local",
          },
        },
        "spec": Object {
          "affinity": Object {
            "podAntiAffinity": Object {
              "preferredDuringSchedulingIgnoredDuringExecution": Array [
                Object {
                  "podAffinityTerm": Object {
                    "labelSelector": Object {
                      "matchLabels": Object {
                        "app": "resque",
                        "instance": "resque",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "RAILS_RESQUE_REDIS",
                  "value": "redis.cache.svc.cluster.local:6379:1",
                },
              ],
              "image": "talis/resque-web:stable",
              "imagePullPolicy": "IfNotPresent",
              "name": "example",
              "ports": Array [
                Object {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "200Mi",
                },
                "requests": Object {
                  "cpu": "50m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "imagePullSecrets": Array [
            Object {
              "name": "example-development-local-image-pull-secret-c8fa1a91",
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app": "example",
        "environment": "development",
        "instance": "php-worker-example",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "v1.0",
        "role": "worker",
        "service": "example-development-local",
      },
      "name": "example-development-local-php-worker-example-c8a4b861",
      "namespace": "example",
    },
    "spec": Object {
      "revisionHistoryLimit": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "example",
          "instance": "php-worker-example",
          "role": "worker",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "example",
            "environment": "development",
            "instance": "php-worker-example",
            "managed-by": "cdk8s",
            "region": "local",
            "release": "v1.0",
            "role": "worker",
            "service": "example-development-local",
          },
        },
        "spec": Object {
          "affinity": Object {
            "podAntiAffinity": Object {
              "preferredDuringSchedulingIgnoredDuringExecution": Array [
                Object {
                  "podAffinityTerm": Object {
                    "labelSelector": Object {
                      "matchLabels": Object {
                        "app": "example",
                        "instance": "php-worker-example",
                        "role": "worker",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": Array [
            Object {
              "command": Array [
                "php",
                "vendor/resque/php-resque/bin/resque",
              ],
              "env": Array [
                Object {
                  "name": "WORKER_NUM",
                  "valueFrom": Object {
                    "fieldRef": Object {
                      "fieldPath": "metadata.name",
                    },
                  },
                },
                Object {
                  "name": "REDIS_BACKEND",
                  "value": "redis.cache.svc.cluster.local:6379:1",
                },
                Object {
                  "name": "QUEUE",
                  "value": "my-app:example:jobs",
                },
              ],
              "image": "docker.io/organization/my-app:worker-v1.0",
              "imagePullPolicy": "IfNotPresent",
              "lifecycle": Object {
                "preStop": Object {
                  "exec": Object {
                    "command": Array [
                      "/bin/sh",
                      "-c",
                      "kill -QUIT 1 && while kill -0 1; do sleep 1; done",
                    ],
                  },
                },
              },
              "name": "example",
              "resources": Object {
                "requests": Object {
                  "cpu": "50m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "imagePullSecrets": Array [
            Object {
              "name": "example-development-local-image-pull-secret-c8fa1a91",
            },
          ],
          "terminationGracePeriodSeconds": 300,
        },
      },
    },
  },
]
`;
